# VK-Education-Highload-Twitch

./: README.md  scheme2.drawio
static-web-server/: CMakeLists.txt  Makefile  README.md
